--- a/GRVAS.Data.MemberImporter/GRVAS.Data.MemberImporter.csproj
+++ b/GRVAS.Data.MemberImporter/GRVAS.Data.MemberImporter.csproj
@@ -14,6 +14,13 @@
 	<PackageReference Include="Hangfire.Core" Version="1.7.31" />
 	<PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+	<PackageReference Include="MySql.Data" Version="8.0.32" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="client_secrets.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
