--- a/GRVAS.Admin.MemberImporter/GRVAS.Admin.MemberImporter.csproj
+++ b/GRVAS.Admin.MemberImporter/GRVAS.Admin.MemberImporter.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.0" />
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.5.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.102.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
